# tauri-chat

./: .gitignore  README.md  index.html  lanchat.config.json  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  config.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/chat_files/: c8871a15-20de-447e-9735-98eaeabfff73_命令文件.txt
src-tauri/icons/: chat(48×48).icns  icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  server.rs
src-tauri/src/commands/: ai_cmd.rs  config_cmd.rs  file_cmd.rs  mod.rs  network_cmd.rs
src-tauri/src/models/: ai.rs  chat.rs  mod.rs  network.rs
src-tauri/src/server/: file_handler.rs  handlers.rs  mod.rs  routes.rs  state.rs  ws_handler.rs
src-tauri/src/services/: ai_service.rs  file_service.rs  mcp_server.rs  mod.rs  network_service.rs  tools_service.rs  web_scraper.rs  web_search.rs
src-tauri/src/services/ai/: chat_service.rs  mod.rs  tool_registry.rs  utility_tools.rs
src-tauri/src/services/file/: download.rs  mod.rs  tools.rs
src-tauri/src/services/web/: mod.rs  scraper.rs  search.rs
src-tauri/src/utils/: filename.rs
src/components/: AiChatWindow.tsx  ChatInput.tsx  ChatWindow.tsx  ImagePreview.tsx  LoginScreen.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  TransferIndicator.tsx  UserList.tsx
src/hooks/: useAiChat.ts  useChat.ts  useLocalStorage.ts  useTransfers.tsx
src/styles/: ai.css  base.css  chat-input.css  chat.css  login.css  markdown.css  message.css  sidebar.css  transfer.css
src/utils/: aiHelper.ts  avatar.ts  (+5 more)
