[package]
name = "app"
version = "0.1.0"
description = "LAN Chat - 内网聊天应用"
authors = ["lidongsheng"]
license = ""
repository = "https://gitee.com/li-dongshenger/tauri-chat"
edition = "2026"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
hostname = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
warp = "0.3"
bytes = "1"
tokio-stream = { version = "0.1", features = ["net"] }
urlencoding = "2"
